# llmcost-sdk

./: ARCHITECTURE.md  DEVELOPER_GUIDE.md  README.md
my-sdk/: .env.example  .gitignore  Makefile  pyproject.toml
my-sdk/scripts/: test_auth.sh
my-sdk/src/: __init__.py  client.py  sdk.py
my-sdk/src/api/: __init__.py  routes.py  telemetry.py
my-sdk/src/casdk/: __init__.py  client.py  sdk.py
my-sdk/src/casdk/api/: __init__.py  telemetry.py
my-sdk/src/casdk/auth/: __init__.py  config.py
my-sdk/src/casdk/pricing/: __init__.py  aggregator.py  extractors.py  interceptor.py
my-sdk/src/llmcost/: __init__.py  client.py  sdk.py
my-sdk/src/middleware/: rate_limit.py
my-sdk/src/pricing/: __init__.py  aggregator.py  extractors.py  interceptor.py  manager.py  pricing_sync.json
my-sdk/tests/integration/: test_auth_flow.py  test_cost_tracking.py
my-sdk/tests/unit/api/: test_telemetry.py
my-sdk/tests/unit/auth/: test_client_auth.py
my-sdk/tests/unit/pricing/: __init__.py  test_aggregator.py  test_extractors.py  test_interceptor_custom_wrapper.py
